Metadata/objects/Payment_Plan_Installment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Processing_Date__c</fullName>
        <label>Last Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mid_Term_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mid-Term Adjustment</label>
        <referenceTo>Mid_Term_Adjustment__c</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_tries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of tries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Payment_Method__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Payment_Method__c.Payment_Method__c</field>
                <operation>equals</operation>
                <valueField>$Source.Payment_Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Payment_Method__c</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <formula>TEXT( Payment__r.Status__c )</formula>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others (Cash, Check etc)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Payment Plan Installments</relationshipLabel>
        <relationshipName>Payment_Plan_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Plan Installment</label>
    <nameField>
        <displayFormat>PPI-{0000}</displayFormat>
        <label>Payment Plan Installment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan Installments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Restrict_Changing_AccountDiffFromOrdAcc</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Order__c != null &amp;&amp; Account__c != null &amp;&amp;  Order__r.Account__c !=  Account__c , true, false)</errorConditionFormula>
        <errorMessage>Account should be order &apos;s Account</errorMessage>
    </validationRules>
</CustomObject>